<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.fundAccount.FundAccountFragment">

    <TextView
        android:id="@+id/fundAccountTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/fund_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/satoshi_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/accountDetailsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:text="@string/account_details"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/satoshi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fundAccountTxt"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/accountDetailsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:strokeColor="@color/steel_gray"
        app:cardElevation="5dp"
        android:backgroundTint="@color/steel_gray"
        app:layout_constraintTop_toBottomOf="@id/accountDetailsTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:id="@+id/accountNumberTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datahaven_account_number"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:fontFamily="@font/satoshi_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/userAccountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="0541561500"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/satoshi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accountNumberTxt"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/copyUserAccountNumberBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/green"
                android:text="@string/copy_user_account_number"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/satoshi_bold"
                app:layout_constraintTop_toBottomOf="@id/userAccountNumber"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/accountNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/datahaven_account_name"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:fontFamily="@font/satoshi_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/copyUserAccountNumberBtn"/>
            <TextView
                android:id="@+id/userAccountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="CreativeHazio"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/satoshi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accountNameTxt"/>
            <TextView
                android:id="@+id/accountBankTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/datahaven_account_bank"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:fontFamily="@font/satoshi_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userAccountName"/>
            <TextView
                android:id="@+id/userBankName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="GtBank"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/satoshi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accountBankTxt"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/orTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/or"
        android:textColor="@color/gray"
        android:fontFamily="@font/satoshi_medium"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/accountDetailsCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payNowBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/green"
        app:cornerRadius="10dp"
        android:text="@string/pay_now"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/satoshi_bold"
        app:layout_constraintTop_toBottomOf="@id/orTxt"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>