<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.purchaseHistory.PurchaseHistoryFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/receiptCardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/light_green"
        app:strokeColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/networkIDimage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                app:strokeColor="@color/steel_gray"
                app:strokeWidth="1dp"
                app:shapeAppearanceOverlay="@style/round_profile_picture"
                app:srcCompat="@drawable/ic_mtn_colored"
                android:scaleType="centerInside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/networkProviderTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/network_provider"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_medium"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/networkIDimage"/>
            <TextView
                android:id="@+id/networkProvider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="MTN"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/networkProviderTxt"/>

            <TextView
                android:id="@+id/planTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/data_plan_txt"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_medium"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/networkProvider"/>
            <TextView
                android:id="@+id/plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="5.0GB"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/planTxt"/>

            <TextView
                android:id="@+id/amountTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/amount_txt"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_medium"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plan"/>
            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="₦1,250"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountTxt"/>

            <TextView
                android:id="@+id/phoneTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/phone_number_txt"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_medium"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amount"/>
            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="07019487824"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneTxt"/>

            <TextView
                android:id="@+id/transactionIdTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/transaction_id"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_medium"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone"/>
            <TextView
                android:id="@+id/transactionId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="453EDse5537gR6g3994"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/transactionIdTxt"/>

            <TextView
                android:id="@+id/statusTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/status_txt"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_medium"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/transactionId"/>
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Successful"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statusTxt"/>

            <TextView
                android:id="@+id/dateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/date_txt"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_medium"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/status"/>
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Aug 20, 10:23 AM"
                android:textColor="@color/steel_gray"
                android:fontFamily="@font/satoshi_bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateTxt"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareReceiptBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/green"
        app:cornerRadius="10dp"
        android:text="@string/share_receipt"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/satoshi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiptCardview"/>

</androidx.constraintlayout.widget.ConstraintLayout>