<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/data_haven_bg"
    tools:context=".presentation.fragment.userReg.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/satoshi_black"
            android:text="@string/login_txt"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/satoshi_bold"
            android:text="@string/email_txt"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_txt" />

        <EditText
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:minHeight="45dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/light_green_bg"
            android:fontFamily="@font/satoshi_medium"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="@color/steel_gray"
            android:textColorHint="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_txt" />

        <TextView
            android:id="@+id/password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/satoshi_bold"
            android:text="@string/password_txt"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_edt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_txl"
            android:layout_width="match_parent"
            android:minHeight="45dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_txt"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/steel_gray">

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/light_green_bg"
                android:fontFamily="@font/satoshi_medium"
                android:paddingStart="9dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/steel_gray"
                android:textColorHint="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/forgot_password_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="2dp"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password"
            android:fontFamily="@font/satoshi_bold"
            android:textAllCaps="false"
            android:textColor="@color/steel_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_txl" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_with_email_password_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/satoshi_bold"
            android:text="@string/login_txt"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_btn" />

        <Button
            android:id="@+id/new_user_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/new_user_txt"
            android:fontFamily="@font/satoshi_bold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_with_email_password_btn" />

        <ProgressBar
            android:id="@+id/log_in_progress_bar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>